cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_13459_exhibitor-appliance.yaml
SenzaInfo:
  StackName: exhibitor
  Parameters:
    - DockerVersion:
        Description: "Docker image version of exhibitor."
    - DockerBaseImage:
        Description: "Docker image path of exhibitor."
        Default: "registry.opensource.zalan.do/aruha/exhibitor-appliance"
    - HostedZone:
        Description: AWS Hosted Zone to work with
    - ExhibitorBucket:
        Description: S3 bucket for exhibitor (to store shared configuration and backups)
    - ApplicationID:
        Description: "The Application Id which got registered for lawang in Yourturn/Kio."
        Default: "exhibitor"
    - UseHostName:
        Description: "Use hostname to configure exhibitor. If not - ip address will be used"
        Default: "yes"
    - CustomS3BucketRegion:
        Description: "Use custom s3 bucket region for exhibitor configuration"
        Default: ""
    - CustomTransactionsDirectory:
        Description: "Use custom transactions directory"
        Default: "/opt/zookeeper/transactions"
    - CustomSnapshotsDirectory:
        Description: "Use custom snapshots directory"
        Default: "/opt/zookeeper/snapshots"
SenzaComponents:
  - Configuration:
      Type: Senza::StupsAutoConfiguration
  - AppServer:
      IamRoles:
        - Ref: ExhibitorRole
      InstanceType: t2.micro
      ElasticLoadBalancer: ExhibitorLoadBalancer
      HealthCheckType: ELB
      SecurityGroups:
        - Fn::GetAtt:
            - ExhibitorSecurityGroup
            - GroupId
      TaupageConfig:
        application_id: "{{Arguments.ApplicationID}}"
        application_version: "{{Arguments.DockerVersion}}"
        runtime: Docker
        source: "{{Arguments.DockerBaseImage}}:{{Arguments.DockerVersion}}"
        ports:
          2181: 2181
          2888: 2888
          3888: 3888
          8181: 8181
          8778: 8778
        root: True
        environment:
          S3_BUCKET: "{{Arguments.ExhibitorBucket}}"
          S3_PREFIX: "{{Arguments.version}}"
          USE_HOSTNAME: "{{Arguments.UseHostName}}"
          AWS_REGION: "{{Arguments.CustomS3BucketRegion}}"
          TRANSACTIONS_DIR: "{{Arguments.CustomTransactionsDirectory}}"
          SNAPSHOTS_DIR: "{{Arguments.CustomSnapshotsDirectory}}"
        appdynamics_application: '{{Arguments.ApplicationID}}-{{Arguments.version}}'
        application_logrotate_size: 100M
        application_logrotate_rotate: 4
      Type: Senza::TaupageAutoScalingGroup
      AutoScaling:
        Minimum: 3
        Maximum: 3
        MetricType: CPU
Resources:
  ExhibitorRoute53Record:
    Type: AWS::Route53::RecordSet
    Properties:
      Type: CNAME
      TTL: 20
      HostedZoneName: "{{Arguments.HostedZone}}"
      Name: "exhibitor-{{Arguments.version}}.{{Arguments.HostedZone}}"
      ResourceRecords:
        - Fn::GetAtt:
            - ExhibitorLoadBalancer
            - DNSName
  ExhibitorSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Exhibitor Appliance Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2888
          ToPort: 2888
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3888
          ToPort: 3888
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8181
          ToPort: 8181
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8778
          ToPort: 8778
          CidrIp: 0.0.0.0/0
  ExhibitorLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      CrossZone: true
      HealthCheck:
        HealthyThreshold: 3
        Interval: 30
        Target: HTTP:8181/exhibitor/v1/cluster/state
        Timeout: 5
        UnhealthyThreshold: 5
      Listeners:
        - InstancePort: 8181
          LoadBalancerPort: 8181
          Protocol: TCP
      LoadBalancerName: exhibitor-{{Arguments.version}}
      SecurityGroups:
        - Fn::GetAtt:
            - ExhibitorSecurityGroup
            - GroupId
      Scheme: internal
      Subnets:
        Fn::FindInMap:
          - LoadBalancerSubnets
          - Ref: AWS::Region
          - Subnets
  ExhibitorRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: S3Access
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: s3:*
                Resource:
                  - "arn:aws:s3:::{{Arguments.ExhibitorBucket}}"
                  - "arn:aws:s3:::{{Arguments.ExhibitorBucket}}/*"
